--- a/hrms/index.html
+++ b/hrms/index.html
@@ -22,6 +22,19 @@
 <!-- MAIN CSS -->
 <link rel="stylesheet" href="../assets/css/site.min.css">
 
+<!-- Biblioteca de Mapas -->
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBe5g9pdbE_5T0F2MdPMdu6FkiSfdBTuwg&callback=initMap&libraries=&v=weekly"
+      defer
+    ></script>
+
+    <style>
+        #map {
+        height: calc(100vh - 64px);
+      }
+
+    </style>
 </head>
 <body class="theme-cyan font-montserrat light_version">
 
@@ -499,11 +512,22 @@
         </div>
     </div>
     <div id="main-content" style="width: 100%;" >
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7510.28401155021!2d-47.94063707280862!3d-19.7491203990246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bad0338395c297%3A0xec09cad33549efdb!2sCentro%2C%20Uberaba%20-%20MG!5e0!3m2!1spt-BR!2sbr!4v1598118210463!5m2!1spt-BR!2sbr" width="100%" height="900" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <div id="map"></div>
     </div>
 
 </div>
-
+<script>
+    let map;
+    function initMap() {
+      map = new google.maps.Map(document.getElementById("map"), {
+        center: {
+          lat: -19.7502,
+          lng: -47.9325,
+        },
+        zoom: 15,
+      });
+    }
+  </script>
 <!-- Javascript -->
 <script src="../assets/bundles/libscripts.bundle.js"></script>    
 <script src="../assets/bundles/vendorscripts.bundle.js"></script>
