--- a/hrms/entrar.html
+++ b/hrms/entrar.html
@@ -39,28 +39,28 @@
                 <div class="login-img">
                     <img class="img-fluid" src="../assets/images/login-img.png" />
                 </div>
-                <form class="form-auth-small" action="index.html">
+                <form class="form-auth-small" action="dashboard.html">
                     <div class="mb-3">
-                        <p class="lead">Login to your account</p>
+                        <p class="lead">Entre com sua conta</p>
                     </div>
                     <div class="form-group">
                         <label for="signin-email" class="control-label sr-only">Email</label>
-                        <input type="email" class="form-control round" id="signin-email" value="user@domain.com" placeholder="Email">
+                        <input type="email" class="form-control round" id="signin-email" value="jubileu@c+-.com" placeholder="Email">
                     </div>
                     <div class="form-group">
-                        <label for="signin-password" class="control-label sr-only">Password</label>
+                        <label for="signin-password" class="control-label sr-only">Senha</label>
                         <input type="password" class="form-control round" id="signin-password" value="thisisthepassword" placeholder="Password">
                     </div>
                     <div class="form-group clearfix">
                         <label class="fancy-checkbox element-left">
                             <input type="checkbox">
-                            <span>Remember me</span>
+                            <span>Lembrar-me</span>
                         </label>								
                     </div>
-                    <button type="submit" class="btn btn-primary btn-round btn-block">LOGIN</button>
+                    <button type="submit" class="btn btn-primary btn-round btn-block">Entrar</button>
                     <div class="mt-4">
-                        <span class="helper-text m-b-10"><i class="fa fa-lock"></i> <a href="page-forgot-password.html">Forgot password?</a></span>
-                        <span>Don't have an account? <a href="page-register.html">Register</a></span>
+                        <span class="helper-text m-b-10"><i class="fa fa-lock"></i> <a href="#">Esqueceu a senha?</a></span>
+                        <span>Não tem uma conta? <a href="#">Registrar</a></span>
                     </div>
                 </form>
                 <div class="pattern">
