--- a/hrms/perfil.html
+++ b/hrms/perfil.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
-<title>Oculux | Profile</title>
+    <title>C+- | Perfil</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -784,7 +784,6 @@
                     <li class="header">Main</li>
                     <li><a href="dashboard.html"><i class="icon-speedometer"></i><span>Dashboard</span></a></li>
                     <li ><a href="pacientes.html"><i class="icon-user"></i><span>Pacientes</span></a></li>
-                    <li><a href="departamentos.html"><i class="icon-grid"></i><span>Departamentos</span></a></li>
                     <li><a href="medicos.html"><i class="icon-users"></i><span>Médicos</span></a></li>
                     <li><a href="consultas.html"><i class="icon-flag"></i><span>Consultas</span></a></li>
                     <li style="position: absolute; bottom: 0;" class="active open"><a  href="perfil.html"><i class="icon-settings"></i><span>Perfil</span></a></li>
