--- a/hrms/dashboard.html
+++ b/hrms/dashboard.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
-<title>Oculux HR | Home</title>
+<title>C+- | Dashboard</title>
 
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -788,7 +788,6 @@
                     <li class="header">Main</li>
                     <li class="active open"><a href="dashboard.html"><i class="icon-speedometer"></i><span>Dashboard</span></a></li>
                     <li><a href="pacientes.html"><i class="icon-user"></i><span>Pacientes</span></a></li>
-                    <li><a href="departamentos.html"><i class="icon-grid"></i><span>Departamentos</span></a></li>
                     <li><a href="medicos.html"><i class="icon-users"></i><span>Médicos</span></a></li>
                     <li><a href="consultas.html"><i class="icon-flag"></i><span>Consultas</span></a></li>
                     <li style="position: absolute; bottom: 0;"><a href="perfil.html"><i class="icon-settings"></i><span>Perfil</span></a></li>
@@ -805,15 +804,11 @@
                         <h1>Dashboard</h1>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">Oculux</a></li>
+                            <li class="breadcrumb-item"><a href="#">C+-</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
                             </ol>
                         </nav>
-                    </div>            
-                    <div class="col-md-6 col-sm-12 text-right hidden-xs">
-                        <a href="javascript:void(0);" class="btn btn-sm btn-primary" title="">Create Campaign</a>
-                        <a href="https://themeforest.net/item/oculux-bootstrap-4x-admin-dashboard-clean-modern-ui-kit/23091507" class="btn btn-sm btn-success" title="Themeforest"><i class="icon-basket"></i> Buy Now</a>
-                    </div>
+                    </div>                      
                 </div>
             </div>
             <div class="row clearfix">
