--- a/hrms/entrar.html
+++ b/hrms/entrar.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
-<title>Oculux | Login</title>
+<title>C+- | Entrar</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -45,7 +45,7 @@
                     </div>
                     <div class="form-group">
                         <label for="signin-email" class="control-label sr-only">Email</label>
-                        <input type="email" class="form-control round" id="signin-email" value="jubileu@c+-.com" placeholder="Email">
+                        <input type="email" class="form-control round" id="signin-email" value="jubileu@c.com" placeholder="Email">
                     </div>
                     <div class="form-group">
                         <label for="signin-password" class="control-label sr-only">Senha</label>
