--- a/hrms/consultas.html
+++ b/hrms/consultas.html
@@ -265,7 +265,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="javascript:void(0);" class="search_toggle icon-menu" title="Search Result"><i class="icon-magnifier"></i></a></li>
                         <li><a href="javascript:void(0);" class="right_toggle icon-menu" title="Right Menu"><i class="icon-bubbles"></i><span class="notification-dot bg-pink">2</span></a></li>
-                        <li><a href="page-login.html" class="icon-menu"><i class="icon-power"></i></a></li>
+                        <li><a href="entrar.html" class="icon-menu"><i class="icon-power"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -776,7 +776,7 @@
                         <li><a href="app-inbox.html"><i class="icon-envelope-open"></i>Mensagens</a></li>
                         <li><a href="javascript:void(0);"><i class="icon-settings"></i>Configurações</a></li>
                         <li class="divider"></li>
-                        <li><a href="page-login.html"><i class="icon-power"></i>Sair</a></li>
+                        <li><a href="entrar.html"><i class="icon-power"></i>Sair</a></li>
                     </ul>
                 </div>                
             </div>  
