nova localização do index

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 <meta name="description" content="Oculux Bootstrap 4x admin is super flexible, powerful, clean &amp; modern responsive admin dashboard with unlimited possibilities.">
 <meta name="author" content="GetBootstrap, design by: puffintheme.com">
 
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="./hrms/favicon.ico" type="image/x-icon">
 <!-- VENDOR CSS -->
-<link rel="stylesheet" href="../assets/vendor/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="../assets/vendor/font-awesome/css/font-awesome.min.css">
-<link rel="stylesheet" href="../assets/vendor/animate-css/vivify.min.css">
+<link rel="stylesheet" href="./assets/vendor/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="./assets/vendor/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="./assets/vendor/animate-css/vivify.min.css">
 
-<link rel="stylesheet" href="../assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker3.min.css">
+<link rel="stylesheet" href="./assets/vendor/bootstrap-datepicker/css/bootstrap-datepicker3.min.css">
 
 <!-- MAIN CSS -->
-<link rel="stylesheet" href="../assets/css/site.min.css">
+<link rel="stylesheet" href="./assets/css/site.min.css">
 
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
@@ -152,7 +152,7 @@
             <div class="navbar-left">
                 <ul class="nav navbar-nav">
                     <li><div class="navbar-brand">
-                        <a href="index.html"><img style="width: 30px;" src="../assets/images/iconc+-.png" alt="C+-" class="ml-3" >
+                        <a href="index.html"><img style="width: 30px;" src="./assets/images/iconc+-.png" alt="C+-" class="ml-3" >
                     </div></li>                    
                 </ul>
             </div>
@@ -160,7 +160,7 @@
             <div class="navbar-right">
                 <div id="navbar-menu">
                     <ul class="nav navbar-nav">
-                        <li><a href="entrar.html" class="btn btn-sm btn-primary btn-round" title="" class="mr-3">Entrar</a></li>                        
+                        <li><a href="./hrms/entrar.html" class="btn btn-sm btn-primary btn-round" title="" class="mr-3">Entrar</a></li>                        
                     </ul>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                             <div class="d-flex align-items-center">
                                 <div class="avtar-pic w35 bg-red" data-toggle="tooltip" data-placement="top" title="" data-original-title="Avatar Name"><span>SS</span></div>
                                 <div class="ml-3">
-                                    <a href="page-invoices-detail.html" title="">South Shyanne</a>
+                                    <a href="javascript:void(0);" title="">South Shyanne</a>
                                     <p class="mb-0">south.shyanne@example.com</p>
                                 </div>
                             </div>
@@ -206,7 +206,7 @@
                         </td>
                         <td>
                             <div class="d-flex align-items-center">
-                                <img src="../assets/images/xs/avatar2.jpg" data-toggle="tooltip" data-placement="top" title="" alt="Avatar" class="w35 h35 rounded" data-original-title="Avatar Name">
+                                <img src="./assets/images/xs/avatar2.jpg" data-toggle="tooltip" data-placement="top" title="" alt="Avatar" class="w35 h35 rounded" data-original-title="Avatar Name">
                                 <div class="ml-3">
                                     <a href="javascript:void(0);" title="">Zoe Baker</a>
                                     <p class="mb-0">zoe.baker@example.com</p>
@@ -248,7 +248,7 @@
                         </td>
                         <td>
                             <div class="d-flex align-items-center">
-                                <img src="../assets/images/xs/avatar5.jpg" data-toggle="tooltip" data-placement="top" title="" alt="Avatar" class="w35 h35 rounded" data-original-title="Avatar Name">
+                                <img src="./assets/images/xs/avatar5.jpg" data-toggle="tooltip" data-placement="top" title="" alt="Avatar" class="w35 h35 rounded" data-original-title="Avatar Name">
                                 <div class="ml-3">
                                     <a href="javascript:void(0);" title="">Brandon Smith</a>
                                     <p class="mb-0">Maria.gill@example.com</p>
@@ -262,7 +262,7 @@
                         </td>
                         <td>
                             <div class="d-flex align-items-center">
-                                <img src="../assets/images/xs/avatar6.jpg" data-toggle="tooltip" data-placement="top" title="" alt="Avatar" class="w35 h35 rounded" data-original-title="Avatar Name">
+                                <img src="./assets/images/xs/avatar6.jpg" data-toggle="tooltip" data-placement="top" title="" alt="Avatar" class="w35 h35 rounded" data-original-title="Avatar Name">
                                 <div class="ml-3">
                                     <a href="javascript:void(0);" title="">Kevin Baker</a>
                                     <p class="mb-0">kevin.baker@example.com</p>
@@ -276,7 +276,7 @@
                         </td>
                         <td>
                             <div class="d-flex align-items-center">
-                                <img src="../assets/images/xs/avatar2.jpg" data-toggle="tooltip" data-placement="top" title="" alt="Avatar" class="w35 h35 rounded" data-original-title="Avatar Name">
+                                <img src="./assets/images/xs/avatar2.jpg" data-toggle="tooltip" data-placement="top" title="" alt="Avatar" class="w35 h35 rounded" data-original-title="Avatar Name">
                                 <div class="ml-3">
                                     <a href="javascript:void(0);" title="">Zoe Baker</a>
                                     <p class="mb-0">zoe.baker@example.com</p>
@@ -311,7 +311,7 @@
                                     </div>
                                 </li>
                                 <li class="right">
-                                    <img src="../assets/images/xs/avatar1.jpg" class="rounded" alt="">
+                                    <img src="./assets/images/xs/avatar1.jpg" class="rounded" alt="">
                                     <div class="chat-info">
                                         <span class="message">Hi, Alizee<br> It is almost completed. I will send you an email later today.</span>
                                     </div>
@@ -323,7 +323,7 @@
                                     </div>
                                 </li>
                                 <li class="right">
-                                    <img src="../assets/images/xs/avatar1.jpg" class="rounded" alt="">
+                                    <img src="./assets/images/xs/avatar1.jpg" class="rounded" alt="">
                                     <div class="chat-info">
                                         <span class="message">Sure we'will have a blast today.</span>
                                     </div>
@@ -352,7 +352,7 @@
                         <li class="online">
                             <a href="javascript:void(0);">
                                 <div class="media">
-                                    <img class="media-object " src="../assets/images/xs/avatar3.jpg" alt="">
+                                    <img class="media-object " src="./assets/images/xs/avatar3.jpg" alt="">
                                     <div class="media-body">
                                         <span class="name">Marshall Nichols</span>
                                         <span class="message">online</span>
@@ -400,7 +400,7 @@
                         <li class="online">
                             <a href="javascript:void(0);">
                                 <div class="media">
-                                    <img class="media-object " src="../assets/images/xs/avatar5.jpg" alt="">
+                                    <img class="media-object " src="./assets/images/xs/avatar5.jpg" alt="">
                                     <div class="media-body">
                                         <span class="name">Debra Stewart</span>
                                         <span class="message">online</span>
@@ -412,7 +412,7 @@
                         <li class="offline">
                             <a href="javascript:void(0);">
                                 <div class="media">
-                                    <img class="media-object " src="../assets/images/xs/avatar2.jpg" alt="">
+                                    <img class="media-object " src="./assets/images/xs/avatar2.jpg" alt="">
                                     <div class="media-body">
                                         <span class="name">Lisa Garett</span>
                                         <span class="message">offline since Jan 18</span>
@@ -551,7 +551,7 @@
                 },
                 map: map,
              title: hp.nome,
-            icon: hp.covid?"../assets/images/pin_red.png":"../assets/images/pin_blue.png"
+            icon: hp.covid?"./assets/images/pin_red.png":"./assets/images/pin_blue.png"
                     });
             });
           });
@@ -560,11 +560,11 @@
     }
   </script>
 <!-- Javascript -->
-<script src="../assets/bundles/libscripts.bundle.js"></script>    
-<script src="../assets/bundles/vendorscripts.bundle.js"></script>
+<script src="./assets/bundles/libscripts.bundle.js"></script>    
+<script src="./assets/bundles/vendorscripts.bundle.js"></script>
 
-<script src="../assets/vendor/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
-<script src="../assets/bundles/mainscripts.bundle.js"></script>
+<script src="./assets/vendor/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
+<script src="./assets/bundles/mainscripts.bundle.js"></script>
 
 </body>
 </html>
