--- a/hrms/perfil.html
+++ b/hrms/perfil.html
@@ -135,7 +135,7 @@
 
             <div class="navbar-left">
                 <div class="navbar-btn">
-                    <a href="dashboard.html"><img src="../assets/images/iconc+-.png" alt="C+-" class="img-fluid logo"></a>
+                    <a href="perfil.html"><img src="../assets/images/iconc+-.png" alt="C+-" class="img-fluid logo"></a>
                     <button type="button" class="btn-toggle-offcanvas"><i class="lnr lnr-menu fa fa-bars"></i></button>
                 </div>
                 <ul class="nav navbar-nav">
