--- a/hrms/dashboard.html
+++ b/hrms/dashboard.html
@@ -776,7 +776,7 @@
                     <a href="javascript:void(0);" class="dropdown-toggle user-name" data-toggle="dropdown"><strong>Louis Pierce</strong></a>
                     <ul class="dropdown-menu dropdown-menu-right account vivify flipInY">
                         <li><a href="perfil.html"><i class="icon-user"></i>Perfil</a></li>
-                        <li><a href="app-inbox.html"><i class="icon-envelope-open"></i>Mensagens</a></li>
+                        <li><a href="#"><i class="icon-envelope-open"></i>Mensagens</a></li>
                         <li><a href="javascript:void(0);"><i class="icon-settings"></i>Configurações</a></li>
                         <li class="divider"></li>
                         <li><a href="entrar.html"><i class="icon-power"></i>Sair</a></li>
