--- a/hrms/medicos.html
+++ b/hrms/medicos.html
@@ -261,7 +261,7 @@
                     <ul class="nav navbar-nav">
                         <li><a href="javascript:void(0);" class="search_toggle icon-menu" title="Search Result"><i class="icon-magnifier"></i></a></li>
                         <li><a href="javascript:void(0);" class="right_toggle icon-menu" title="Right Menu"><i class="icon-bubbles"></i><span class="notification-dot bg-pink">2</span></a></li>
-                        <li><a href="entrar.html" class="icon-menu"><i class="icon-power"></i></a></li>
+                        <li><a href="../index.html" class="icon-menu"><i class="icon-power"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -772,7 +772,7 @@
                         <li><a href="#"><i class="icon-envelope-open"></i>Mensagens</a></li>
                         <li><a href="javascript:void(0);"><i class="icon-settings"></i>Configurações</a></li>
                         <li class="divider"></li>
-                        <li><a href="index.html"><i class="icon-power"></i>Sair</a></li>
+                        <li><a href="../index.html"><i class="icon-power"></i>Sair</a></li>
                     </ul>
                 </div>                
             </div>  
