--- a/hrms/pacientes.html
+++ b/hrms/pacientes.html
@@ -139,7 +139,7 @@
     
                 <div class="navbar-left">
                     <div class="navbar-btn">
-                        <a href="index.html"><img src="../assets/images/icon.svg" alt="Oculux Logo" class="img-fluid logo"></a>
+                        <a href="../index.html"><img src="../assets/images/icon.svg" alt="Oculux Logo" class="img-fluid logo"></a>
                         <button type="button" class="btn-toggle-offcanvas"><i class="lnr lnr-menu fa fa-bars"></i></button>
                     </div>
                     <ul class="nav navbar-nav">
@@ -264,7 +264,7 @@
                         <ul class="nav navbar-nav">
                             <li><a href="javascript:void(0);" class="search_toggle icon-menu" title="Search Result"><i class="icon-magnifier"></i></a></li>
                             <li><a href="javascript:void(0);" class="right_toggle icon-menu" title="Right Menu"><i class="icon-bubbles"></i><span class="notification-dot bg-pink">2</span></a></li>
-                            <li><a href="index.html" class="icon-menu"><i class="icon-power"></i></a></li>
+                            <li><a href="../index.html" class="icon-menu"><i class="icon-power"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -775,7 +775,7 @@
                             <li><a href="#"><i class="icon-envelope-open"></i>Mensagens</a></li>
                             <li><a href="javascript:void(0);"><i class="icon-settings"></i>Configurações</a></li>
                             <li class="divider"></li>
-                            <li><a href="index.html"><i class="icon-power"></i>Sair</a></li>
+                            <li><a href="../index.html"><i class="icon-power"></i>Sair</a></li>
                         </ul>
                     </div>                
                 </div>  
