acrescimo da pagina de registro

--- a/hrms/entrar.html
+++ b/hrms/entrar.html
@@ -101,7 +101,7 @@
                   ><i class="fa fa-lock"></i>
                   <a href="#">Esqueceu a senha?</a></span
                 >
-                <span>Não tem uma conta? <a href="#">Registrar</a></span>
+                <span>Não tem uma conta? <a href="registrar.html">Registrar</a></span>
                 <div v-if="verifica">
                   <div class="alert alert-danger" role="alert">
                     Usuário ou senha incorretos.
